--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ th, td { padding:8px; text-align:left; }
 </head>
 <body>
 
-<h1>Daily Awareness Journal</h1>
+<h1>Daily Mood Tracker</h1>
 <div id="status"></div>
 
 <form id="dailyForm">
