--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@ th, td { padding:8px; text-align:left; }
 </head>
 <body>
 
-<h1>Daily Mood Tracker</h1>
+<style>
+  h1 {
+    text-decoration: underline;
+  }
+</style>
+  
+  <h1>Daily Mood Tracker</h1>
 <div id="status"></div>
 
 <form id="dailyForm">
